# lua4dec

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  define.h  lua4dec.cpp  parser.cpp
.github/workflows/: build-ubuntu-clang.yml  build-windows-msvc.yml  build.yml  cmake-multi-platform.yml  main.yml  test.yml
doc/: Doc.md
source/: debug.cpp  debug.hpp  errors.cpp  errors.hpp  lua4dec.cpp  lua4dec.hpp  main.cpp
source/ast/: ast.cpp  ast.hpp
source/lua/: lua.cpp  lua.hpp
source/parser/: parser.cpp  parser.hpp
test/: test.cpp
test/scripts/: simple.lua
tests/: differ.cpp  test.cpp
tests/scripts/: call.lua  closure.lua  comp.lua  condition.lua  if.lua  if_else.lua  if_elseif.lua  if_elseif_else.lua  list.lua  local.lua  loops.lua  map.lua  operations.lua  return.lua  simple.lua  table.lua
